--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "React-Redux-App",
+  "name": "React-App",
   "version": "1.0.0",
-  "description": "Simple React-Redux app",
+  "description": "Simple React app",
   "main": "index.js",
-  "repository": "git@github.com:avivalk/React-Redux-App.git",
+  "repository": "git@github.com:avivalk/React-App.git",
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
   },
